# VIBOAI

./: CODEX.md  README.md  index.html  kanban.rs  main.rs  package.json  store.tsx  tauri-leap-koog-audit.md  vault_crypto.rs  vibo-build-guide.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: phase-task.md
docs/: GITHUB_EXECUTION_PLAN.md  README.md  VIBO_ROADMAP.md  crypto.ts  csp-policy.md  lfm (1).ts  logic-integration-audit.md  rust-file-mapping.md  tauri-koog-migration-audit.md  vibo-build-guide.md
koog/: AgentService.kt  BiometricPlugin.kt  GoogleTool.kt  KanbanTool.kt  LeapPlugin.kt  LeapPlugin.swift  NoteTool.kt  ProviderTool.kt  TauriIpc.kt  VaultCryptoTool.kt
src/: index.css
src-android/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: google.rs  kanban.rs  main.rs  notes.rs  oauth.rs  providers.rs  vault.rs
src-tauri/src/capabilities/: mod.rs  vault.rs
src-tauri/src/core/: crypto.rs  filesystem.rs  mod.rs  storage.rs
src/components/: AgentsView.tsx  ChatAssistant.tsx  CommandPalette.tsx  DashboardView.tsx  KanbanView.tsx  KnowledgeGraph.tsx  LockScreen.tsx  NewNoteDialog.tsx  NoteEditor.tsx  NotebookView.tsx  OnboardingWizard.tsx  SettingsView.tsx
src/components/settings/: CloudProvidersSection.tsx  LocalModelsSection.tsx
src/components/ui/: carousel.tsx  chart.tsx  form.tsx  sidebar.tsx
src/lib/: crypto.ts  lfm.ts  models.ts  store.tsx  tauriClient.ts  types.ts
zettel-canvas-mind-main/: .env.example  .gitignore
zettel-canvas-mind-main/src/: vite-env.d.ts
(+1 files in other folders)
